* Version 1.2.11 (unreleased)
- rc_read_dictionary_from_buffer: introduced new function; this
  is required to load dictionary attributes from string buffer
  (#24)

* Version 1.2.10 (released 2018-05-08)
- rc_send_server_ctx: addressed unaligned access issue on certain
  platforms (#27).
- Added Namespace support (#30). radcli now supports Namespaces on 
  Linux based systems.
- rc_apply_config: introduced new function; this is required to be
  called when no configuration file is set and parameters are set
  individually using calls to rc_add_config().


* Version 1.2.9 (released 2018-01-20)
- rc_avpair_gen: addressed issue that caused all attributes to be
  rejected if the last attribute in the message is a VSA with an unknown
  Vendor-ID or Type.


* Version 1.2.8 (released 2017-07-29)
- rc_random_vector will use gnutls_rnd() to obtain randomness if
  compiled with GnuTLS. This enables the library to not depend
  on specific kernel versions (there are versions of Linux kernel
  which do not provide calls for getentopy libc function).
- Fixed issue when several servers in radiusclient.conf are present.
  The issue caused only the first server to be contacted. Report
  and fix by Martin Belanger.
- No longer divide the timeout when across multiple servers.
  This restores the semantics of radiusclient-ng and freeradius-client
  in the 'radius_timeout' configuration contents. Report and
  fix by Martin Belanger.
- On REJECT copy back the AV-pair list. Prior to 1.2.8 radcli
  would copy the AV-pair list only in case of ACCEPT and CHALLENGE
  scenarios, and that caused issues with EAP. Patch by Aravind Prasad S.


* Version 1.2.7 (released 2016-12-18)
- Use monotonic time to calculate time differences. Based on
  patch by Marcel Patzlaff.
- Added basic EAP support. radcli will now automatically add
  a Message-Authenticator attribute to messages containing
  EAP-Message attributes. In addition, radcli will handle
  Access-Challenge response by returning a new